# WCA_tools_lib

ages/src/: main.rs
scorecard_to_pdf/: Cargo.toml
scorecard_to_pdf/examples/: blank.rs
scorecard_to_pdf/src/: draw_scorecards.rs  font.rs  language.rs  lib.rs  scorecard.rs  scorecard_generator.rs
wca_oauth/: Cargo.toml  output.rs
wca_oauth/src/: json  lib.rs  main.rs  noauth.rs  oauth.rs  wcif_oauth.rs
wca_oauth/src/competition/: mod.rs
wca_oauth/src/noauth/: base.rs  manage_competitions.rs  mod.rs  requests.rs  secret.rs  traits.rs
wca_oauth/src/wcif/: activity.rs  advancement_condition.rs  assignment.rs  attempt_result.rs  avatar.rs  cutoff.rs  event.rs  mod.rs  person.rs  personal_best.rs  registration.rs  result.rs  role.rs  room.rs  round.rs  schedule.rs  time_limit.rs  venue.rs  wca_id.rs
wca_scorecards_lib/: Cargo.toml
wca_scorecards_lib/src/: blank.rs  error.rs  lib.rs  main.rs  parse.rs  wcif.rs
wca_scorecards_lib/src/localhost/: responses.rs
wca_scorecards_lib/src/pdf/: mod.rs
